<resources>
    <string name="app_name">WeatherAppCodeChallenge</string>
    <string name="tab_text_1">Current Temp</string>
    <string name="tab_text_2">5 Day</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temp">%s°</string>
    <string name="thermostatTargetTemp">%s°</string>
    <string name="date_text">%s</string>
    <string name="network_message">Network Unavailable</string>
    <string name="time">time</string>
    <string name="forecasttemp">forecastTemp</string>
    <string name="weather_icon">weather icon</string>
    <string name="ok">OK</string>
    <string name="permission_required">Location access is required to show your location weather conditions.</string>
</resources>
